templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-test
  namespace: nodeapp-test
spec:
  type: NodePort
  sessionAffinity: None
  selector:
    app: nodeapp-test
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
